Formatted Data for NLP Model

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ django-celery-beat = "*"
 djangorestframework-simplejwt = "*"
 djoser = "*"
 psycopg2 = "*"
+nltk = "*"
 
 [requires]
 python_version = "3.8"
